# mspix

./: LICENSE  README.md  pyproject.toml
Conversion Scripts/: README.md  WatersRawToMsPix.py  nanotof_conversion.py
Conversion Scripts/Composed Dataset/: post_merge_cleanup_script.py
Conversion Scripts/Composed Dataset/Rust Merge Script/: Cargo.toml
Conversion Scripts/Composed Dataset/Rust Merge Script/src/: main.rs
Conversion Scripts/Composed Dataset/Rust tpx3 Conversion/: README.md  mspix.rs
src/mspix/: __init__.py
