[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "mspix"
version = "1.0.3"
authors = [
  {name="Kasper Krijnen", email="kasperkrijnen@gmail.com"},
  {name="Ian Anthony", email="i.anthony@maastrichtuniversity.nl"}
]
description = "Mass spectrometry imaging file format mspix, designed to be an efficient storage and analysis format for mass spectrometry imaging data produced using time-of-flight mass spectrometetry, with an emphasis on being highly space and access-time efficient when working with large numbers (>5 million) of pixels."
dependencies = ["numpy", "pyimzml", "h5py"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/M4i-Imaging-Mass-Spectrometry/mspix"
Issues = "https://github.com/M4i-Imaging-Mass-Spectrometry/mspix/issues"